added timer function

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="jumbotron">
         <h1 class="display-4">So You Think You Know Beer</h1>
-        <p class="instruction">Time To Test Your Knowledge. Choose A, B, C, or D Below to Answer Each Question</p>
+        <p class="instruction">Time To Test Your Knowledge. Choose A, B, C, or D Below. You Have 15 Seconds to Answer Each Question.</p>
         <hr class="my-4">
         <h5 class="lead" id="question"></h5>
         <p class="lead">
@@ -30,7 +30,8 @@
             <a class="btn btn-primary btn-lg" href="#" role="button" id="btnD">D</a>
             <span id="d"></span>
         </p>
-      </div>
+        <div class ="timer"></div>
+    </div>
 
 
 
